--- a/www/index.html
+++ b/www/index.html
@@ -58,6 +58,22 @@
       })
     }
     function updateData() {
+      UTdata.fetch()
+      .then(function(uTdata){
+        let value = parseInt($("#update").val());
+        uTdata.set(key,value);
+        return uTdata.update();
+      })
+      .then(function(results){
+        $("#display").removeClass();
+        $("#display").addClass("bg-success");
+        $("#display").html("update success");
+      })
+      .catch(function(error){
+        $("#display").removeClass();
+        $("#display").addClass("bg-success");
+        $("#display").html("update fail:" + JSON.stringify(error));
+      })
     }
     function countData() {
     }
